crates/htui/tests/snapshots/concepts_search__decisions_project.snap
---
source: crates/htui/tests/concepts_search.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
┌ Backlog (11) ───────────────────────────────────────┐┌ ANA-1 ────────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││Data model, box registry and sync topology │
│  ANA-2    open               Orchestrator step grap…││ANA-1  ANA  done                           │
│ ┌ Search concepts ─────────────────────────────────────────────────────────────────────────────┐ │
│ │scope htui · decisions on                                                                     │ │
│ │query terminal raw panic                                                                      │ │
│ │                                                                                              │ │
│ │> FIX-1      item (done)                3.000  FIX-1 Terminal left raw after panic            │ │
│ │                                                                                              │ │
│▾│                                                                                              │a│
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │1 hit(s)                                                                                      │ │
│ │                                                                                              │ │
│ │Enter search/open · Up/Down move · Ctrl+d decisions · Ctrl+p scope · Ctrl+r index · Esc close │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
Ctrl+c quit · F1 help
