crates/htui/tests/snapshots/concepts_search__hits.snap
---
source: crates/htui/tests/concepts_search.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog  2 Skills  3 Requirements  4 Settings  5 Chat
┌ Backlog (11) ───────────────────────────────────────┐┌ ANA-1 ────────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││Data model, box registry and sync topology │
│  ANA-2    open               Orchestrator step grap…││ANA-1  ANA  done                           │
│ ┌ Search concepts ─────────────────────────────────────────────────────────────────────────────┐ │
│ │scope all projects · decisions off                                                            │ │
│ │query postgres store cache                                                                    │ │
│ │                                                                                              │ │
│ │> ANA-1      item                       3.000  ANA-1 Data model, box registry and sync topolog│ │
│ │  FEAT-3     item                       3.000  FEAT-3 Postgres store and cache                │ │
│▾│  R-STO-1    requirement                2.000  R-STO-1 Postgres is the source of truth; the ca│a│
│ │  ANA-1      verdict document           2.000  ANA-1 Verdict: Postgres with a per-box cache (v│ │
│ │  FEAT-1     item                       1.000  FEAT-1 TUI scaffold Stand up the terminal appli│ │
│ │  ANA-1      research document          1.000  ANA-1 Research: store topology (agy) (research)│ │
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │                                                                                              │ │
│ │6 hit(s)                                                                                      │ │
│ │                                                                                              │ │
│ │Enter search/open · Up/Down move · Ctrl+d decisions · Ctrl+p scope · Ctrl+r index · Esc close │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
Ctrl+c quit · F1 help
